--- a/src/app/product/product-new/product-new.component.html
+++ b/src/app/product/product-new/product-new.component.html
@@ -130,6 +130,18 @@
                     El precio es requerido
                   </div>
                 </div>
+                <div class="col-md-3 col-md-offset-1">
+                  <div class="form-check">
+                    <input formControlName="default" type="radio" class="form-check-input form-control" (change)="setDefaultSize(i)" name="default" id="{{ 'default' + i }}">
+                    <label class="form-check-label" for="{{ 'default' + i }}">Default</label>
+                  </div>
+                  <!-- <input formControlName="price" type="number" placeholder="Precio($)" class="form-control" [class.is-invalid]="productForm.get('sizes').controls[i].controls.price.invalid && (productForm.get('sizes').controls[i].controls.price.dirty || productForm.get('sizes').controls[i].controls.price.touched)"
+                    id="{{ 'productSizePrice' + i }}"> -->
+
+                  <!-- <div *ngIf="productForm.get('sizes').controls[i].controls.price.invalid && (productForm.get('sizes').controls[i].controls.price.dirty || productForm.get('sizes').controls[i].controls.price.touched)" class="alert alert-danger">
+                    El precio es requerido
+                  </div> -->
+                </div>
               </div>
             </div>
             <button class="col-md-1" no-margin color="danger" (click)="removeSize(i)">-</button>
@@ -175,7 +187,7 @@
       </div>
       <div class="row col-md-2 col-lg-2 col-xl-3 col-sm-2">
         <button class="btn btn-md btn-primary" type="button" (click)="showModalCancel(cancelTemplate)">Cancelar</button> 
-        <button class="btn btn-md btn-primary" [disabled]="productForm.invalid" type="submit" (click)="validateSizes()">Guardar</button>
+        <button class="btn btn-md btn-primary" [disabled]="productForm.invalid || defaultSize === -1" type="submit" (click)="validateSizes()">Guardar</button>
       </div>    
     </form>
 </div>      
