--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -174,12 +174,18 @@ overflow: auto; overflow-x: hidden;">
 
     </div>
     <div class="row">
-      <div class="row col-lg-12 col-md-12 col-sm-12 customSubtittle">
+      <div class="row col-lg-8 col-md-8 col-sm-8 customSubtittle">
           {{ order.created_at | date:'dd/MM/yy HH:mm' }}
       </div>
+      <div class="d-flex justify-content-end row col-lg-4 col-md-4 col-sm-4 pr-0">
+        <div class="float-right pt-2">
+          <i class="fa fa-cog float-right pr-4" (click)="showEditModal(editTemplate, order._id)"></i>
+        </div>
+        <div class="float-right pt-2">
+          <i class="fa fa-cog float-right pr-0" (click)="showSliceModal(sliceTemplate, order._id)"></i>
+        </div>
+      </div>
     </div>
-    <i class="fa fa-cog float-right pr-4" (click)="showEditModal(editTemplate, order._id)"></i>
-    <i class="fa fa-cog float-right pr-4" (click)="showSliceModal(sliceTemplate, order._id)"></i>
     <div class="row" *ngIf='enableAddProducts'>
       <div class="col-lg-12 col-md-12 col-sm-12 customAddProductsTitle"><span class="align-middle">{{ 'Adicionar' | uppercase }}</span></div>
       <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 customAddProductsSection">
